Utkast till planering tillagd

--- a/project-specification/specification.tex
+++ b/project-specification/specification.tex
@@ -74,10 +74,10 @@ completely predictable. It is easy to estimate the entropy of
 data if the data consists of samples with $n$ bit where each such sample is
 generated completely independent from any of the other samples. If this is the 
 case then the unpredictability and thus the entropy only depends on the 
-probabilities of the samples $x$ and can be calculated by estimating the
-probabilities of the sample $x$ with the relative frequency of $x$. 
-In case the samples are not independent identically distributed then it is a 
-lot harder to estimate the entropy. \\
+probability distributions of the single samples $x$ and thus it is sufficient
+to estimate this distribution to get an estimation of the entropy.
+In case the samples are not independent identically distributed then it 
+is a lot harder to estimate the entropy. \\
 
 \noindent
 Several test suites exists which try to determine when data does not behave 
@@ -157,6 +157,68 @@ protocols.
 
 
 \section*{Conditions and Schedule}
+\subsection*{Resources}
+There should not be a big demand on resources or equipment.
+\subsection*{Limitations}
+\subsection*{Collaboration with the principal}
+\subsection*{Schedule}
+The plan is to work more or less full time during the entire thesis project
+beginning 17 January until it is finished.
+\begin{description}
+    \item [Specification] \hfill\\
+        \begin{description}
+            \item[Begin] 18-January 2017
+            \item[End] Week 5
+            \item[Comment]\hfill \\
+                This specification will hopefully be done and approved by 
+                week 5
+        \end{description}
+
+    \item[Pilot Study] \hfill\\
+        \begin{description}
+            \item[Begin] 18-January 2017
+            \item[End] Week 9
+            \item[]
+            \item[Comment]\hfill \\
+                The work with the pilot study was initiated during the work on 
+                the specification and will continue when the specification is 
+                done for approximately 4 more weeks
+        \end{description}
+    \item[Implementation] \hfill\\
+        \begin{description}
+            \item[Begin] Week 8
+            \item[Working Prototype] Week 11\hfill\\
+            \item[End] Week 14
+            \item[Comment]\hfill \\
+                A working prototype which is relatively close to the final 
+                implementation is planned to be finished by Week 11. After this
+                testing and fine tuning of the prototype may be performed in 
+                order to get good data for the report which will be written 
+                in parallel.
+        \end{description}
+    \item[Report] \hfill\\
+        \begin{description}
+            \item[Begin] Week 12
+            \item[Finished first draft] Week 15
+            \item[End] Week 19
+            \item[Comment]\hfill \\
+                There will be work on the report during the other parts of the
+                thesis, but during the indicated time the main focus will be 
+                on the report. The  
+        \end{description}
+    \item[Presentation] \hfill\\
+        \begin{description}
+            \item[Begin] Week 15
+            \item[Finished first draft] Week 17
+            \item[End] Week 20
+            \item[Comment] The work on the presentation should be done in
+                parallel with the fine tuning of the report after the first 
+                draft has been completed. A finished first draft of the 
+                presentation should be done relatively early to give plenty
+                of time to practice the presentation and fine tune it.
+        \end{description}
+\end{description}
+
 \bibliography{references}{}
 \bibliographystyle{plain}
 \end{document}
