Fixade till saker i planeringen

--- a/project-specification/specification.tex
+++ b/project-specification/specification.tex
@@ -171,23 +171,22 @@ beginning 17 January until it is finished.
             \item[End] Week 5
             \item[Comment]\hfill \\
                 This specification will hopefully be done and approved by 
-                week 5
+                week 5.
         \end{description}
 
     \item[Pilot Study] \hfill\\
         \begin{description}
             \item[Begin] 18-January 2017
             \item[End] Week 9
-            \item[]
             \item[Comment]\hfill \\
                 The work with the pilot study was initiated during the work on 
                 the specification and will continue when the specification is 
-                done for approximately 4 more weeks
+                done for approximately 4 more weeks.
         \end{description}
     \item[Implementation] \hfill\\
         \begin{description}
             \item[Begin] Week 8
-            \item[Working Prototype] Week 11\hfill\\
+            \item[Working Prototype] Week 11
             \item[End] Week 14
             \item[Comment]\hfill \\
                 A working prototype which is relatively close to the final 
@@ -204,7 +203,8 @@ beginning 17 January until it is finished.
             \item[Comment]\hfill \\
                 There will be work on the report during the other parts of the
                 thesis, but during the indicated time the main focus will be 
-                on the report. The  
+                on the report. A first draft of the report should be finished
+                early to give plenty of time for adjustments and comments.
         \end{description}
     \item[Presentation] \hfill\\
         \begin{description}
