Lite mer bakgrund relaterat till faktiska entropikällor

--- a/project-specification/references.bib
+++ b/project-specification/references.bib
@@ -75,3 +75,14 @@
   journal={National Institute of Standards and Technology},
   year={2012}
 }
+
+@manual{/dev/random,
+ title      = "RANDOM(4) Linux Programmer's Manual",
+ %author        = "",
+ %organization  = "",
+ %address   = "",
+ %edition   = "",
+ year       = "2017",
+ month      = "January",
+ %note      = "",
+}
