--- a/project-specification/specification.tex
+++ b/project-specification/specification.tex
@@ -30,10 +30,10 @@ Omegapoint \\
 \section*{Background and Objective}
 Several cryptographic protocols require some input to be unpredictable 
 in order to provide security. Furthermore, any keys used in the protocols 
-must also be generated in an unpredictable manner since these are crucial for the 
-level of security, thus it must be hard for any adversary to guess or compute such 
-keys. In order to get a source of unpredictability, random generators are used.
-These generators can potentially 
+must also be generated in an unpredictable manner since these are crucial for 
+the level of security, thus it must be hard for any adversary to guess or 
+compute such keys. In order to get a source of unpredictability,
+random generators are used.  These generators can potentially 
 be truly random and generate numbers based on some phenomenon which is deemed 
 unpredictable. The speed of these generators is however often limited and because
 of this it is more common that the generators are pseudo random, i.e.
@@ -81,7 +81,8 @@ is a lot harder to estimate the entropy. \\
 
 \noindent
 Several test suites exists which try to determine when data does not behave 
-randomly\cite{Ecuyer2007}\cite{Bassham:2010:SRS:2206233}. These suites can to some extent 
+randomly\cite{Ecuyer2007}\cite{Bassham:2010:SRS:2206233}.
+These suites can to some extent 
 identify sequences where the samples do not behave like identically distributed
 random variables. Most such tests do however only identify when there is 
 incorrect behaviour in the sequence and does not give an estimate of the actual
@@ -115,7 +116,8 @@ a lot more entropy sources which better models more types of data sources. \\
 A specific application where there is a need for an entropy estimator is for
 the random number generator /dev/random on Linux systems. Here data is 
 gathered in a pool and the amount of entropy in the data is estimated 
-and added to an estimate of the entropy in the pool\cite{/dev/random}. The random number 
+and added to an estimate of the entropy in the pool\cite{/dev/random}.
+The random number 
 generator then only returns a number when it deems there to be enough entropy
 in the pool. Other random number generators which depend on outside entropy 
 have similar systems which they have in order to avoid giving numbers to 
@@ -124,12 +126,62 @@ The estimates of the available entropy is interesting to analyse as a
 too high estimate of the entropy could be a security risk.
 \section*{Research Questions and Method}
 \subsection*{Question}
+Can new types of entropy estimators give better estimates than existing
+ones on given types of data.
 \subsection*{Problem Definition}
+Investigating existing entropy sources such as /dev/random and seeing how
+they get their entropy and how they estimate the amount they have. Compare the
+way these estimates are performed with existing general tests which are meant 
+to estimate entropy of general data. Then produce estimators which try to give
+better entropy estimates given the data source.
+Further comparison of these produced estimators on data which is produced
+to follow specific distributions will also be performed in order to get 
+values to compare the results to.
 \subsection*{Examination Method}
-\subsection*{Expected Results}
+Existing algorithms for entropy estimation to be tested includes the ones
+implemented by NIST special publication 800-90b\cite{800-90B} and the ones
+in Predictive models for Min Entropy\cite{eprint-2015-26658} as well as 
+the estimates used in entropy sources such as /dev/random. These will be 
+compared with the developed algorithms, which will include algorithms which
+estimate the entropy in the way done by predictors as well as potentially
+other type of estimators. \\
+
+\noindent
+Preliminary the data to be tested is output from different entropy sources,
+before they are mixed in an irreversible way with other data. Furthermore
+tests will be performed on data which have been generated to have a specific
+distribution and thus have a known entropy, given that the random number 
+generator used for the data is a good one. Potentially some study could be
+performed on estimating the entropy of random number generators, although only
+on weak such, which are not meant to be cryptographically secure.
+\subsection*{Expected Scientific Results}
+The hypothesis is that new entropy estimators may complement existing 
+estimators by providing better estimates for at least some type of data.
+This is being tested by producing random data which have a known entropy
+with varying distributions and running the estimators against this data. 
+The results will hopefully be useful for better estimations of entropy for 
+some entropy sources which given better entropy estimations can be either safer
+to use or alternatively more efficient while providing the same level of 
+security.
+
 \section*{Evaluation and News Value}
 \subsection*{Evaluation}
+The produced estimators will be compared with existing entropy tests on
+different types of data. In order to evaluate the produced estimators the tests
+on data which follows known distributions are probably of the most interest as
+these have a known correct value on the entropy. This gives a clear indication
+on when the newly created estimators produce better values than existing tests.
+Any large deviations from the results of existing estimators with the new ones
+on real world data may then potentially give information about the properties
+of the real world data or alternatively that the produced estimators are not 
+good matches for this type of data. 
+
 \subsection*{News Value}
+New estimators could be useful for producer of new entropy sources in order to
+give better estimates of the produced entropy. Existing entropy sources could
+also potentially benefit from new entropy estimators to give a better estimate
+and thus potentially eliminate weaknesses existing or give a more efficient 
+stream of random data.
 
 \section*{Pilot Study}
 Some study of the implementations of pseudo random number generators and
@@ -171,9 +223,6 @@ of interest to investigate the weaknesses which have been discovered that were
 the result of lacking entropy when generating random numbers for cryptographic 
 protocols.
 
-
-
-
 \section*{Conditions and Schedule}
 The plan is to work more or less full time during the entire thesis project
 beginning 17 January until it is finished.
@@ -183,6 +232,7 @@ Potentially output from a hardware source of entropy could be of interest
 as well, as it could be another source of entropy to analyse.
 \subsection*{Limitations}
 \subsection*{Collaboration with the principal}
+
 \subsection*{Schedule}
 \begin{description}
     \item [Specification] \hfill
