--- a/project-specification/specification.tex
+++ b/project-specification/specification.tex
@@ -231,8 +231,18 @@ There should not be a big demand on resources or equipment.
 Potentially output from a hardware source of entropy could be of interest
 as well, as it could be another source of entropy to analyse.
 \subsection*{Limitations}
+The project will deal mainly with entropy estimation. There will thus not be a
+lot of focus on what is done with the entropy or how to produce entropy. How 
+entropy is produced in current implementations is however of interest as this 
+may give insights into how to better estimate the produced entropy. The project
+will also not try to estimate the entropy output of cryptographically secure 
+random number generators other than as a potential sanity check as these should
+be approximately full entropy sources to any efficient and sane estimator.
 \subsection*{Collaboration with the principal}
-
+The principal will be available for discussion regarding content and direction
+of the project. He will also be able to proof read any material and give 
+response on what is written. In case of any needed resources he will also be 
+able to give some help in acquiring these.
 \subsection*{Schedule}
 \begin{description}
     \item [Specification] \hfill
