Lite fler referenser

--- a/project-specification/references.bib
+++ b/project-specification/references.bib
@@ -78,11 +78,45 @@
 
 @manual{/dev/random,
  title      = "RANDOM(4) Linux Programmer's Manual",
- %author        = "",
+ %author        = "Michael Kerrisk",
  %organization  = "",
  %address   = "",
  %edition   = "",
  year       = "2017",
  month      = "January",
  %note      = "",
+}
+
+@article{brown2017dieharder,
+  title={Dieharder: A random number test suite},
+  author={Brown, Robert G and Eddelbuettel, Dirk and Bauer, David},
+  journal={Open Source software library, under development},
+  year={2017}
+}
+
+@article{haahr2010random,
+  title={Random. org: True random number service},
+  author={Haahr, Mads},
+  journal={School of Computer Science and Statistics, Trinity College, Dublin, Ireland. Website (http://www. random. org). Accessed},
+  volume={1},
+  year={2017}
+}
+
+@article{goldberg1996randomness,
+  title={Randomness and the Netscape browser},
+  author={Goldberg, Ian and Wagner, David},
+  journal={Dr Dobb's Journal-Software Tools for the Professional Programmer},
+  volume={21},
+  number={1},
+  pages={66--71},
+  year={1996},
+  publisher={Redwood City, CA: M\&T Pub., 1989-}
+}
+@inproceedings{yilek2009private,
+  title={When private keys are public: results from the 2008 Debian OpenSSL vulnerability},
+  author={Yilek, Scott and Rescorla, Eric and Shacham, Hovav and Enright, Brandon and Savage, Stefan},
+  booktitle={Proceedings of the 9th ACM SIGCOMM conference on Internet measurement conference},
+  pages={15--27},
+  year={2009},
+  organization={ACM}
 }
