--- a/project-specification/specification.tex
+++ b/project-specification/specification.tex
@@ -71,7 +71,7 @@ information theory by Shannon with Shannon entropy
 A sequence of bits from a source will have an entropy of $1$ per bit if
 it is completely random and an entropy of $0$ per bit if it is 
 completely predictable. It is easy to estimate the entropy of 
-data if the data consists of samples with $n$ bit where each such sample is
+data if the data consists of samples with $n$ bits where each such sample is
 generated completely independent from any of the other samples. If this is the 
 case then the unpredictability and thus the entropy only depends on the 
 probability distributions of the single samples $x$ and thus it is sufficient
@@ -238,10 +238,7 @@ as well, as it could be another source of entropy to analyse.
 The project will deal mainly with entropy estimation. There will thus not be a
 lot of focus on what is done with the entropy or how to produce entropy. How 
 entropy is produced in current implementations is however of interest as this 
-may give insights into how to better estimate the produced entropy. The project
-will also not try to estimate the entropy output of cryptographically secure 
-random number generators other than as a potential sanity check as these should
-be approximately full entropy sources to any efficient and sane estimator.
+may give insights into how to better estimate the produced entropy. 
 \subsection*{Collaboration with the principal}
 The principal will be available for discussion regarding content and direction
 of the project. He will also be able to proof read any material and give 
