--- a/references/references.bib
+++ b/references/references.bib
@@ -163,3 +163,65 @@
   year={2009},
   organization={ACM}
 }
+
+@inproceedings{barak2005model,
+  title={A model and architecture for pseudo-random generation with applications to/dev/random},
+  author={Barak, Boaz and Halevi, Shai},
+  booktitle={Proceedings of the 12th ACM conference on Computer and communications security},
+  pages={203--212},
+  year={2005},
+  organization={ACM}
+}
+
+@article{shwartz2005fast,
+  title={Fast kernel entropy estimation and optimization},
+  author={Shwartz, Sarit and Zibulevsky, Michael and Schechner, Yoav Y},
+  journal={Signal Processing},
+  volume={85},
+  number={5},
+  pages={1045--1058},
+  year={2005},
+  publisher={Elsevier}
+}
+
+
+@misc{rfc1750,
+  added-at = {2009-11-15T15:37:34.000+0100},
+  author = {{Eastlake 3rd}, D. and Crocker, S. and Schiller, J.},
+  biburl = {http://www.bibsonomy.org/bibtex/202497e7bf57137afa963a0d33fdc5415/henkellermann},
+  howpublished = {RFC 1750 (Informational)},
+  interhash = {9707cc7fe3ad59947a509fd2f8dd137f},
+  intrahash = {02497e7bf57137afa963a0d33fdc5415},
+  keywords = {imported},
+  month = {December},
+  note = {Obsoleted by RFC 4086},
+  number = 1750,
+  organization = {Internet Engineering Task Force},
+  publisher = {IETF},
+  series = {Request for Comments},
+  timestamp = {2009-11-15T15:37:54.000+0100},
+  title = {{Randomness Recommendations for Security}},
+  url = {http://www.ietf.org/rfc/rfc1750.txt},
+  year = 1994
+}
+
+
+@misc{rfc4086,
+  added-at = {2009-11-15T15:37:34.000+0100},
+  author = {{and 3rd}, D. Eastlake and Schiller, J. and Crocker, S.},
+  biburl = {http://www.bibsonomy.org/bibtex/2af451926265505e7470a17bd7c1c85d0/henkellermann},
+  howpublished = {RFC 4086 (Best Current Practice)},
+  interhash = {10dd9953413c3d9901d7930d7a8e12b9},
+  intrahash = {af451926265505e7470a17bd7c1c85d0},
+  keywords = {imported},
+  month = {June},
+  number = 4086,
+  organization = {Internet Engineering Task Force},
+  publisher = {IETF},
+  series = {Request for Comments},
+  timestamp = {2009-11-15T15:38:20.000+0100},
+  title = {{Randomness Requirements for Security}},
+  url = {http://www.ietf.org/rfc/rfc4086.txt},
+  year = 2005
+}
+
